<resources>
    <string name="qr_app_name">QR Scanner</string>
    <string name="qr_menu_about">About</string>
    <string name="qr_about">About</string>
    <string name="qr_about_ad_choice">AD Choice</string>
    <string name="qr_about_privacy">Privacy Policy</string>
    <string name="qr_copyright_info"></string>
    <string name="qr_action_settings">Setting</string>
    <string name="qr_section_format">Hello World from section: %1$d</string>
    <string name="qr_main_exit_toase">Press again to exit</string>
    <string name="qr_main_scan_tips">Align the QR code barcode with the frame for scanning</string>
    <string name="qr_tab_name_capture">Scanner</string>
    <string name="qr_tab_name_history">History</string>
    <string name="qr_tab_name_share">Generator</string>
    <string name="qr_tab_name_setting">Setting</string>
    <string name="qr_history_select_all">all</string>
    <string name="qr_history_empty_title">There is no results yet</string>
    <string name="qr_history_tab_scan">Scan History</string>
    <string name="qr_history_tab_generate">Create History</string>
    <string name="qr_back_button_label">Back</string>
    <string name="qr_next_button_label">Next</string>
    <string name="qr_skip_button_label">Skip</string>
    <string name="qr_privacy_start">START</string>
    <string name="qr_privacy_message_pre">Understand and agree to the&#160;</string>
    <string name="qr_privacy_message">Terms and Privacy</string>
    <string name="preferences_share">Share</string>
    <string name="preferences_feedback">Feedback</string>
    <string name="preferences_about">About</string>
    <string name="preferences_support">Support</string>
    <string name="preferences_premium">Premium</string>
    <string name="preferences_auto_open_web_title">Auto open</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard </string>
    <string name="preferences_play_beep_title">Sound</string>
    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="qr_premium_unlimited">Unlimited scanning and generation times.</string>
    <string name="qr_premium_support">Support over 300+ types and scenarios.</string>
    <string name="qr_premium_custom">Custom your own QR Code for share.</string>
    <string name="qr_premium_no">No Ads forever.</string>
    <string name="qr_purchase_state">purchase success</string>
    <string name="qr_vip_tip">Speed your Study &amp; Business.</string>
    <string name="qr_vip_month_tip">1 Month: %s/Month.</string>
    <string name="qr_vip_month_tip2">3-days free trial, then %s/Month. Cancel anytime</string>
    <string name="qr_vip_year_tip">12 Month: %s/Month</string>
    <string name="qr_vip_year_tip2">3-days free trial, save %s/Year. Cancel anytime</string>
    <string name="qr_premium_start_buy">START 3 DAYS FOR FREE</string>
    <string name="qr_premium_start_upgrade">Upgrade</string>
    <string name="qr_premium_watch_video">Watch video to share</string>
    <string name="result_type_name_addressbook">Contacts</string>
    <string name="result_type_name_email_address">Email</string>
    <string name="result_type_name_product">Bar code</string>
    <string name="result_type_name_uri">Website</string>
    <string name="result_type_name_text">Text</string>
    <string name="result_type_name_geo">Location</string>
    <string name="result_type_name_tel">Telephone</string>
    <string name="result_type_name_sms">SMS</string>
    <string name="result_type_name_calendar">Calendar</string>
    <string name="result_type_name_wifi">Wi-Fi</string>
    <string name="result_type_name_isbn">ISBN</string>
    <string name="result_type_name_vin">Barcode</string>
    <string name="result_type_name_instagram">Instagram</string>
    <string name="result_type_name_facebook">Facebook</string>
    <string name="result_type_name_whatsapp">WhatsApp</string>
    <string name="result_type_name_youtube">YouTube</string>
    <string name="result_type_name_twitter">Twitter</string>
    <string name="result_type_name_spotify">Spotify</string>
    <string name="result_type_name_viber">Viber</string>
    <string name="button_browse_website">Browse website</string>
    <string name="button_copy_link">Copy link</string>
    <string name="button_share">Share</string>
    <string name="button_copy_text">Copy text</string>
    <string name="button_search_on_web">Search</string>
    <string name="button_connect_wifi">Connect</string>
    <string name="button_copy_network_name">Copy name</string>
    <string name="button_copy_password">Copy password</string>
    <string name="button_add_contact2">Add contact</string>
    <string name="button_copy_name">Copy name</string>
    <string name="button_copy_number">Copy phone</string>
    <string name="button_dial_number">Dial</string>
    <string name="button_send_email">Send email</string>
    <string name="button_copy_email">Copy email</string>
    <string name="button_send_messages">Send SMS</string>
    <string name="button_search_from_instagram">Search from Instagram</string>
    <string name="button_search_from_facebook">Search from Facebook</string>
    <string name="button_search_from_whatsapp">Search from WhatsApp</string>
    <string name="button_search_from_youtube">Search from YouTube</string>
    <string name="button_search_from_twitter">Search from Twitter</string>
    <string name="button_search_from_spotify">Search from Spotify</string>
    <string name="button_search_from_viber">Search from Viber</string>
    <string name="result_website_detecting">Check URL...</string>
    <string name="result_website_secure">Secure website</string>
    <string name="result_website_malicious">Malicious</string>
    <string name="result_website_unknown">UnKnow</string>
    <string name="input_content">Input content</string>
    <string name="input_ssid">Input SSID</string>
    <string name="input_url">Input url</string>
    <string name="input_contact_name">Input name</string>
    <string name="input_email_address">Input email</string>
    <string name="input_email_content">Input content</string>
    <string name="input_message_content">Input message</string>
    <string name="input_barcode">Input barcode</string>
    <string name="input_longitude">Input longitude</string>
    <string name="input_latitude">Input latitude</string>
    <string name="input_altitude">Input altitude</string>
    <string name="scene_edit_title_username">Username:</string>
    <string name="scene_edit_title_phone_number">Phone:</string>
    <string name="scene_edit_title_facebook">Facebook ID:</string>
    <string name="scene_edit_title_youtube">Channel ID:</string>
    <string name="scene_edit_title_artist">Artist:</string>
    <string name="scene_edit_title_song">Song:</string>
    <string name="scene_edit_hint_input_username">Input user name</string>
    <string name="scene_edit_hint_facebook_id">Input Facebook ID</string>
    <string name="scene_edit_hint_channel_id">Input channel ID</string>
    <string name="scene_edit_hint_soptify_artist">Input artist</string>
    <string name="scene_edit_hint_soptify_song">Input song</string>
    <string name="scene_edit_hint_phone_number">Input phone</string>
    <string name="qr_share_tips">share tips \n sss</string>
    <string name="qr_generate">Generate</string>
    <string name="qr_next">Next</string>
    <string name="qr_url">URL:</string>
    <string name="qr_ssid">SSID:</string>
    <string name="qr_hidden_network">Hide network</string>
    <string name="qr_encryption_type">Encription type</string>
    <string name="qr_password">Password:</string>
    <string name="qr_contact_name">Name:</string>
    <string name="qr_share_contact_tips">Share contacts in the address book to generate directly in QR Scanner</string>
    <string name="qr_email">Email:</string>
    <string name="qr_text">Text:</string>
    <string name="qr_message_content">Message content: </string>
    <string name="qr_recipient_phone">Recipient phone</string>
    <string name="qr_share_type_clipboard">Clipboard</string>
    <string name="qr_share_type_url">Url</string>
    <string name="qr_share_type_wifi">WIFI</string>
    <string name="qr_share_type_text">Text</string>
    <string name="qr_share_type_contact">Contact</string>
    <string name="qr_share_type_phone">Phone</string>
    <string name="qr_share_type_email">Email</string>
    <string name="qr_share_type_sms">SMS</string>
    <string name="qr_share_type_location">Location</string>
    <string name="qr_share_type_bar_code">Barcode</string>
    <string name="qr_save">Save</string>
    <string name="qr_share">Share</string>
    <string name="qr_input_ssid_manually">Input manually</string>
    <string name="qr_cancel">Cancel</string>
    <string name="qr_confirm">Confirm</string>
    <string name="qr_file_name">File name</string>
    <string name="qr_longitude">Longitude</string>
    <string name="qr_latitude">Latitude</string>
    <string name="qr_barcode">Barcode</string>
    <string name="qr_altitude">Altitude</string>
    <string name="qr_content">Content:</string>
    <string name="qr_clipboard">Clipboard:</string>
    <string name="qr_username">Username:</string>
    <string name="qr_wifi_not_enable">Wifi not enable</string>
    <string name="qr_not_found_connnected_wifi">Unable to find connected WiFi</string>
    <string name="qr_jump_setting_dialog_default_title">Help</string>
    <string name="qr_jump_setting_dialog_default_content">You can manually authorize the app</string>
    <string name="qr_jump_setting_dialog_default_cancel_text">Cancel</string>
    <string name="qr_jump_setting_dialog_default_ok_text">Start</string>
    <string name="qr_tips_no_camera_permission">No camera permissions</string>
    <string name="qr_tips_no_read_storage_permission">No Read Storage Permissions</string>
    <string name="qr_tips_ration_camera">We need camera permission to scan QR codes and barcodes</string>
    <string name="qr_tips_ration_storate">We need storage permissions to save the QR code image</string>
    <string name="qr_tips_ration_read">We need storage permissions to read images</string>
    <string name="qr_input_file_name">Enter file name</string>
    <string name="grace_period_expiring_tip">Grace Period is Expiring </string>
    <string name="grace_period_expiring_tip2">Okay! Okay! You defeated me</string>
    <string name="grace_period_expiring_day_tip">Your Grace Period is %d days to expire. Please update your Google payment info.</string>
    <string name="grace_period_expiring_discount_eighty_percent_tip">20% discount for Update your info to complete Google payment.</string>
    <string name="grace_period_expiring_discount_seventy_percent_tip">I will give you the lowest discount. 30% discount only for you! Bargaining Master</string>
    <string name="qr_gp_retain_title">Really wanna quit Free Trail ?</string>
    <string name="qr_gp_retain_title_watch_noad">Premium features below are Free to Try now!</string>
    <string name="qr_gp_retain_descript">Premium features below are FREE to TRY now. You can CANCEL ANYTIME.</string>
    <string name="qr_gp_retain_try_for_free">Try for Free</string>
    <string name="qr_gp_retain_quit">Quit</string>
    <string name="qr_gp_retain_i_know">I Know</string>
    <string name="qr_gp_month_title">MONTHLY</string>
    <string name="qr_gp_month_desp">FREE 3-days trial, %s/month</string>
    <string name="qr_gp_year_title">START FREE TRIAL</string>
    <string name="qr_gp_year_desp">yearly, cancel anytime</string>
    <string name="qr_gp_bottom_tip">3-days free trial. Cancel anytime. Automatically extends to an annual subscription for %s/year.</string>
    <string name="dialog_rewarded_video_or_vip_title">Watch videos to unlock 3 times scan? </string>
    <string name="dialog_rewarded_video_or_vip_button_watch">WATCH</string>
    <string name="dialog_rewarded_video_or_vip_button_getvip">GET VIP</string>
    <string name="qr_about_right"></string>
</resources>