<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/share_wifi_container">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/qr_ShareItemTvTitleStyle"
            android:text="@string/qr_ssid"/>

        <EditText
            android:id="@+id/et_wifi_ssid"
            android:theme="@style/qr_MyShareItemEditText"
            android:layout_marginRight="@dimen/qr_share_item_input_margin_right_left"
            android:layout_marginLeft="@dimen/qr_share_item_input_margin_right_left"
            style="@style/qr_ShareItemEtInputStyle"
            android:textColorHint="@color/qr_share_item_input_hint"
            android:drawableRight="@drawable/qr_icon_dropdown"
            android:hint="@string/input_ssid"
            />

        <Switch
            android:id="@+id/switch_wifi_hidden"
            style="@style/qr_ShareItemTvTitleStyle"
            android:layout_marginTop="20dp"
            android:text="@string/qr_hidden_network"/>

        <TextView
            style="@style/qr_ShareItemTvTitleStyle"
            android:text="@string/qr_encryption_type"
            android:layout_marginTop="20dp"/>

        <Spinner
            android:id="@+id/spinner_wifi_encryption"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="@dimen/qr_share_item_input_margin_right_left"
            android:layout_marginLeft="@dimen/qr_share_item_input_margin_right_left"
            android:background="@drawable/qr_spinner_bg"
            android:dropDownVerticalOffset="40dp"/>

        <app.allever.android.ai.qr.scanner.ui.widget.ShareItemInput
            android:id="@+id/id_share_item_input_wifi_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/qr_share_item_input_margin_right_left"
            android:layout_marginLeft="@dimen/qr_share_item_input_margin_right_left"
            app:siiMaxContentLength="80"
            app:siiTitle="@string/qr_password"
            app:siiHint="@string/input_content"/>
    </LinearLayout>
</ScrollView>